<resources>
    <string name="app_name">MedicineTracker</string>
    <string name="height_and_weight"><![CDATA[Height & Weight]]></string>
    <string name="medicine_reminder">Medicine reminder</string>
    <string name="title_activity_height_and_weight">HeightAndWeightActivity</string>
    <string name="weight">Weight</string>
    <string name="edit">edit</string>
    <string name="add">Add</string>
    <string name="height">Height</string>
    <string name="measurement_date">Measurement date</string>
    <string name="pressure">Pressure</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="glucose_level">Glucose level</string>
    <string name="under_development">The screen is under development</string>

    <string name="before_breakfast">Before breakfast</string>
    <string name="before_lunch">Before lunch</string>
    <string name="hour_after_meal">Hour after meal</string>
    <string name="two_hours_after_meal">Two hours after meal</string>
    <string name="after_sport">After Sport</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
</resources>
