<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/measurement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_measurement"
            style="@style/input_field_style"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:id="@+id/measurement_date"
            style="@style/time_field_style"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/measurement_date"/>

        <Button
            android:id="@+id/add_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/added_values"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
